--- a/src/components/Marquee/Marquee.css
+++ b/src/components/Marquee/Marquee.css
@@ -1,10 +1,4 @@
-.marquee {
-  position: relative;
-  width: 100vw;
-  max-width: 100%;
-  height: 206px;
-  overflow-x: hidden;
-}
+
 
 .track {
   position: absolute;
@@ -17,6 +11,7 @@
   font-family: Antonio;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #f4955c;
+  -webkit-text-stroke-color: #FFE900;
   text-transform: uppercase;
+    font-family: "Neue Bold";
 }
