--- a/src/components/Marquee/Marquee.css
+++ b/src/components/Marquee/Marquee.css
@@ -11,7 +11,7 @@
   font-family: Antonio;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
   -webkit-text-stroke-width: 2px;
-  -webkit-text-stroke-color: #FFE900;
+  -webkit-text-stroke-color: #fff;
   text-transform: uppercase;
     font-family: "Neue Bold";
 }
